syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "ContactServiceGRPC";

package contactbook;

//Modelos

message BusinessDepartmentModel {
    int32 BusinessDepartmentId = 1;
    google.protobuf.StringValue Name = 2;
    google.protobuf.StringValue Description = 3;
    repeated ContactModel Contacts = 4;
}

message BusinessPositionModel {
    int32 BusinessPositionId = 1;
    google.protobuf.StringValue Name = 2;
    google.protobuf.StringValue Description = 3;
    repeated ContactModel Contacts = 4;
}

message ContactModel {
    int32 ContactId = 1;
    google.protobuf.StringValue Names = 2;
    google.protobuf.StringValue LastNames = 3;
    google.protobuf.StringValue Pseudonymous = 4;
    google.protobuf.StringValue CompanyName = 5;
    google.protobuf.Int32Value BusinessPositionID = 6;
    optional BusinessPositionModel BusinessPosition = 7;
    google.protobuf.Int32Value BusinessDepartmentId = 8;
    optional BusinessDepartmentModel BusinessDepartment = 9;
    google.protobuf.StringValue Email = 10;
    google.protobuf.StringValue PhoneNumber = 11;
    google.protobuf.StringValue Country = 12;
    google.protobuf.StringValue StreetDirection1 = 13;
    google.protobuf.StringValue StreetDirection2 = 14;
    google.protobuf.StringValue PostalCode = 15;
    google.protobuf.StringValue City = 16;
    google.protobuf.StringValue State = 17;
    optional google.protobuf.Timestamp Birthday = 18;
    google.protobuf.StringValue WebSite = 19;
    google.protobuf.StringValue Relationship = 20;
    google.protobuf.StringValue TypeRelationship = 21;
    google.protobuf.StringValue Notes = 22;
}

// BusinessDepartment service with your requests and your responses.

service BusinessDepartmentService {
    rpc ListBusinessDepartment(ListBusinessDepartmentRequest) returns (ListBusinessDepartmentResponse);
    rpc AddBusinessDepartment(AddBusinessDepartmentRequest) returns (AddBusinessDepartmentResponse);
    rpc EditBusinessDepartment(EditBusinessDepartmentRequest) returns (EditaBusinessDepartmentResponse);
    rpc DeleteBusinessDepartment(DeleteBusinessDepartmentRequest) returns(DeleteBusinessDepartmentResponse);
}

message ListBusinessDepartmentRequest {

}

message ListBusinessDepartmentResponse {
    bool Success = 1;
    google.protobuf.StringValue Message = 2;
    bool Failure = 3;
    repeated BusinessDepartmentModel ResultItem = 4;
}

message AddBusinessDepartmentRequest {
    BusinessDepartmentModel BusinessDepartmentModel = 1;
}

message AddBusinessDepartmentResponse {
    bool Success = 1;
    google.protobuf.StringValue Message = 2;
    bool Failure = 3;
}

message EditBusinessDepartmentRequest {
    BusinessDepartmentModel BusinessDepartmentModel = 1;
}

message EditaBusinessDepartmentResponse {
    bool Success = 1;
    google.protobuf.StringValue Message = 2;
    bool Failure = 3;
}

message DeleteBusinessDepartmentRequest {
    BusinessDepartmentModel BusinessDepartmentModel = 1;
}

message DeleteBusinessDepartmentResponse {
    bool Success = 1;
    google.protobuf.StringValue Message = 2;
    bool Failure = 3;
}

// BusinessPosition service with your requests and your responses.

service BusinessPositionService {
    rpc ListBusinessPosition(ListBusinessPositionRequest) returns (ListBusinessPositionResponse);
    rpc AddBusinessPosition(AddBusinessPositionRequest) returns (AddBusinessPositionResponse);
    rpc EditBusinessPosition(EditBusinessPositionRequest) returns (EditBusinessPositionResponse);
    rpc DeleteBusinessPosition(DeleteBusinessPositionRequest) returns (DeleteBusinessPositionResponse);
}

message ListBusinessPositionRequest {

}

message ListBusinessPositionResponse {
    bool Success = 1;
    google.protobuf.StringValue Message = 2;
    bool Failure = 3;
    repeated BusinessPositionModel ResultItem = 4;
}

message AddBusinessPositionRequest {
    BusinessPositionModel BusinessPositionModel = 1;
}

message AddBusinessPositionResponse {
    bool Success = 1;
    google.protobuf.StringValue Message = 2;
    bool Failure = 3;
}

message EditBusinessPositionRequest {
    BusinessPositionModel BusinessPositionModel = 1;
}

message EditBusinessPositionResponse {
    bool Success = 1;
    google.protobuf.StringValue Message = 2;
    bool Failure = 3;
}

message DeleteBusinessPositionRequest  {
    BusinessPositionModel BusinessPositionModel = 1;
}

message DeleteBusinessPositionResponse {
    bool Success = 1;
    google.protobuf.StringValue Message = 2;
    bool Failure = 3;
}

// Contact service with your requests and your responses.

service ContactService {
    rpc ListContact(ListContactRequest) returns (ListContactResponse);
    rpc AddContact(AddContactRequest) returns (AddContactResponse);
    rpc EditContact(EditContactRequest) returns (EditContactResponse);
    rpc DeleteContact(DeleteContactRequest) returns (DeleteContactResponse);
}

message ListContactRequest {

}

message ListContactResponse {
    bool Success = 1;
    google.protobuf.StringValue Message = 2;
    bool Failure = 3;
    repeated ContactModel ResultItem = 4;
}

message AddContactRequest {
    ContactModel ContactModel = 1;
}

message AddContactResponse {
    bool Success = 1;
    google.protobuf.StringValue Message = 2;
    bool Failure = 3;
}

message EditContactRequest {
    ContactModel ContactModel = 1;
}

message EditContactResponse {
    bool Success = 1;
    google.protobuf.StringValue Message = 2;
    bool Failure = 3;
}

message DeleteContactRequest {
    ContactModel ContactModel = 1;
}

message DeleteContactResponse {
    bool Success = 1;
    google.protobuf.StringValue Message = 2;
    bool Failure = 3;
}